--- a/package.json
+++ b/package.json
@@ -5,6 +5,19 @@
   "main": "index.js",
   "repository": "git@github.com:snakeUni/cat.git",
   "author": "Uni <1025687605@qq.com>",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "src/*.ts": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "license": "MIT",
   "devDependencies": {
     "commitlint": "^8.3.4",
